# stLearn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  Breast-cancer-test-morphology.ipynb  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TBI_inhouse.ipynb  TODO.md  azure-pipelines.yml  dev.ipynb  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_para.py  tox.ini
.eggs/six-1.14.0-py3.7.egg/EGG-INFO/: RECORD
.github/workflows/: python-package.yml
.ipynb_checkpoints/: stLearn_comparison-checkpoint.ipynb
Development/: README.md  svca_script
Development/SPLOTCH/: meta.r  prep.r  splotch_script
Development/SVCA/: filter.r  sort_c-c.r  summarise  svca_script
Development/spatialDE/: Brain1_treated_dt_tissue.ipynb  Brain1_treated_hp_tissue.ipynb  Brain2_treated_dt_tissue.ipynb  Brain2_treated_hp_tissue.ipynb  Brain3_treated_dt_tissue.ipynb  Brain3_treated_hp_tissue.ipynb
docs/: Makefile  Pseudo-space-time-tutorial.ipynb  Read_slideseq.ipynb  Working-with-Old-Spatial-Transcriptomics-data.ipynb  api.rst  cci_multiple-lr_within-spot.ipynb  cci_single-lr_between-spot.ipynb  cci_single-lr_within-spot.ipynb  cci_within-spot_single_lr.ipynb  conf.py  index.rst  installation.rst  interactive.rst  list_tutorial.txt  make.bat  references.rst  requirements.txt  spatialDE.ipynb  stMLE-clustering-tutorial.ipynb  stSME_comparison.ipynb  stlearn-interactive-tutorial.ipynb  stlearn.Read10X.rst  stlearn.ReadSeqFish.rst  stlearn.SMEclust.rst  stlearn.add.annotation.rst  stlearn.add.auto_annotate.rst  stlearn.add.image.rst  stlearn.add.parsing.rst  stlearn.em.run_fa.rst  stlearn.em.run_umap.rst  stlearn.pl.deconvolution_plot.rst  stlearn.pl.gene_plot.rst  stlearn.pl.microenv_plot.rst  stlearn.pl.subcluster_plot.rst  stlearn.pl.trajectory.DE_transition_plot.rst  stlearn.pl.trajectory.local_plot.rst  stlearn.pl.trajectory.pseudotime_plot.rst  stlearn.pl.trajectory.transition_markers_plot.rst  stlearn.pp.log1p.rst  stlearn.pp.neighbors.rst  (+16 more)
docs/_build/doctrees/: Pseudo-space-time-tutorial.doctree  Pseudo-time-space-tutorial.doctree  Read_MERFISH.doctree  Read_seqfish.doctree  Read_slideseq.doctree  ST_deconvolution_visualization.doctree  api.doctree  (+82 more)
docs/_temp/: example_cci.py
docs/release_notes/: 0.3.2.rst  0.4.6.rst  1.1.0.rst  1.1.1.rst  1.1.2.rst  1.1.3.rst  1.1.4.rst  1.1.5.rst  1.2.0.rst  1.2.1.rst  1.2.2.rst  1.3.0.rst  1.4.0.rst  1.4.1.rst  1.5.0.rst  index.rst
resource/: README.md
stlearn/: __init__.py  __main__.py  _compat.py  _settings.py  add.py  classes.py  dataset.py  datasets.py  em.py  logging.py  pl.py  pp.py  read.py  spatial.py  tl.py  types.py  utils.py  view.py
stlearn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stlearn/_datasets/: _datasets.py
stlearn/adds/: add_cpdb.py  add_deconvolution.py  add_image.py  add_labels.py  add_loupe_clusters.py  add_lr.py  add_mask.py  add_positions.py  annotation.py  auto_annotate.py  image.py  labels.py  parsing.py  polygon_annotations.py  positions.py  row_annotations.py
stlearn/app/: app.py  cli.py  requirements.txt
stlearn/datasets/: datasets.py
stlearn/embedding/: diffmap.py  fa.py  ica.py  pca.py  umap.py
stlearn/image_preprocessing/: feature_extractor.py  image_tiling.py  model_zoo.py  segmentation.py
stlearn/pl/: __init__.py  _docs.py  cci_plot.py  cci_plot_helpers.py  classes.py  classes_bokeh.py  cluster_plot.py  deconvolution_plot.py  feat_plot.py  gene_plot.py  mask_plot.py  non_spatial_plot.py  qc_plot.py  stack_3d_plot.py  subcluster_plot.py  utils.py
stlearn/plotting/: QC_plot.py  _docs.py  cci_plot.py  cci_plot_helpers.py  classes.py  classes_bokeh.py  cluster_plot.py  deconvolution_plot.py  enrichment_analysis_plot.py  feat_plot.py  gene_plot.py  mask_plot.py  microenv_plot.py  non_spatial_plot.py  palettes_st.py  pallete.py  stack_3d_plot.py  subcluster_plot.py  utils.py
stlearn/preprocessing/: filter_cells.py  filter_genes.py  graph.py  log_scale.py  normalize.py
stlearn/reads/: read.py
stlearn/spatial/: __init__.py
stlearn/tl/: __init__.py
stlearn/views/: microenv_view.py  pts_view.py
stlearn/wrapper/: ReadSlideSeq.py  clustering.py  concatenate_spatial_adata.py  convert_scanpy.py  preprocessing.py  pts.py  read.py  xenium_alignment.py
tests/: __init__.py  test_CCI.py  test_PSTS.py  test_SME.py  test_Spatial.py  test_cluster_plot.py  test_extract_features.py  test_install.py  test_psts.py  test_sme.py  test_spatial.py  test_stlearn.py  test_tiling.py  test_tools.py  utils.py
tests/adds/: test_row_annotations.py
tests/image_processing/: test_model_zoo.py
tests/pl/: test_cluster_plot.py
tests/pp/: test_extract_features.py  test_tiling.py
tests/spatial/: test_pseudotime.py  test_psts.py  test_sme.py
tests/test_data/: test_data.h5  v1_human_breast_cancer_block_a_section_1.csv  v1_human_breast_cancer_block_a_section_1_proportions.csv
tests/tl/: test_base.py  test_cci.py  test_lr_core.py
tutorials/: Pseudo-space-time-tutorial.ipynb  Pseudo-time-space tutorial.ipynb  README.md  Read_MERFISH.ipynb  Read_seqfish.ipynb  Read_slideseq.ipynb  ST_deconvolution_visualization.ipynb  Working-with-Old-Spatial-Transcriptomics-data.ipynb  cci.ipynb  cci1_cpdb_LRs_neighbours.ipynb  cci1_multiple_LRs_neighbours.ipynb  cci4_selected_LR_within_spot.ipynb  cci4_single_LR_within_spot.ipynb  cci5_permutation_neighbours.ipynb  cci6_permutation_within_spot.ipynb  cci_between-spot_cpdb_lrs.ipynb  cci_between-spot_single_lr.ipynb  cci_multiple-lr_between-spot.ipynb  cci_multiple-lr_within-spot.ipynb  cci_permutation.ipynb  cci_single-lr_between-spot.ipynb  cci_single-lr_within-spot.ipynb  cci_within-spot_cpdb_lrs.ipynb  cci_within-spot_single_lr.ipynb  ccr2_selected_LR_neighbours.ipynb  ccr2_single_LR_neighbours.ipynb  ccr3_cpdb_LRs_within_spot.ipynb  ccr3_multiple_LRs_within_spot.ipynb  connectomedb2020.txt  label_transfer_bc.csv  means.txt  predictions.csv  spatialDE.ipynb  stMLE clustering tutorial.ipynb  stMLE-clustering-tutorial.ipynb  stSME_comparison.ipynb
(+355 files in other folders)
