[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlearn"
version = "1.2.2"
authors = [
    {name = "Genomics and Machine Learning lab", email = "andrew.newman@uq.edu.au"},
]
description = "A downstream analysis toolkit for Spatial Transcriptomic data"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "BSD license"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "anndata>=0.11.0",
    "igraph>=0.11.6",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "numba>=0.60.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scanpy>=1.11.0",
    "squidpy>=1.6.1",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.24.0",
    "tensorflow>=2.18.0",
    "bokeh>=3.6.0",
    "click>=8.2.0,<9.0",
    "pillow>=10.0.0",
    "imageio>=2.30.0",
]
keywords = ["stlearn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.16",
    "pytest>=7.0",
    "tox>=4.0",
    "ghp-import>=2.1.0",
    "sphinx>=4.0",
    "furo==2024.8.6",
    "myst-parser>=0.18",
    "nbsphinx>=0.9.0",
    "types-tensorflow>=2.8.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-autosummary-accessors>=2023.4.0",
]
test = [
    "pytest",
    "pytest-cov",
]
webapp = [
    "flask>=2.0.0",
    "flask-wtf>=1.0.0",
    "wtforms>=3.0.0",
    "markupsafe>2.1.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.0",
    "plotly>=5.0.0",
    "bokeh>=2.4.0",
    "rpy2>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/BiomedicalMachineLearning/stLearn"
Repository = "https://github.com/BiomedicalMachineLearning/stLearn"

[project.scripts]
stlearn = "stlearn.app.cli:main"

[tool.setuptools.packages.find]
include = ["stlearn", "stlearn.*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
line-length=88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "NPY201"]
ignore = ["F811", "N802", "N803", "N806", "N818", "N999", "UP031"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"