[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlearn"
version = "1.3.0"
authors = [
    { name = "Genomics and Machine Learning Lab", email = "andrew.newman@uq.edu.au" },
]
description = "A downstream analysis toolkit for Spatial Transcriptomic data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD license" }
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.0",
    "bokeh>=3.7.0,<4.0",
    "click>=8.2.0,<9.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "numba>=0.58.1",
    "numpy>=1.26.0",
    "pillow>=11.0.0,<12.0",
    "scanpy>=1.11.0",
    "scikit-image>=0.22.0",
    "tensorflow>=2.14.1",
    "keras>=2.14.0",
    "pandas>=2.3.0",
    "imageio>=2.37.0,<3.0",
    "scipy>=1.11.0,<2.0",
    "scikit-learn>=1.7.0,<2.0",
    "zarr>=3.0",
    "dask>=2024.11.2",
    "spatialdata>=0.7.0",
    "spatialdata-io>=0.2.0",
    "geopandas>=1.0.0,<2.0",
    "shapely>=2.0.0,<3.0",
]
keywords = ["stlearn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.16",
    "pytest>=7.0",
    "tox>=4.0",
    "ghp-import>=2.1.0",
    "sphinx>=4.0",
    "furo==2024.8.6",
    "myst-parser>=0.18",
    "nbsphinx>=0.9.0",
    "types-tensorflow>=2.8.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-autosummary-accessors>=2023.4.0",
]
test = [
    "pytest",
    "pytest-cov",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
    "bokeh>=3.7.0,<4.0",
    "rpy2>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/BiomedicalMachineLearning/stLearn"
Repository = "https://github.com/BiomedicalMachineLearning/stLearn"

[project.scripts]
stlearn = "stlearn.app.cli:main"

[tool.setuptools.packages.find]
include = ["stlearn", "stlearn.*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E722", "F811", "N803", "N806", "N818"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"