[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlearn"
version = "1.4.0"
authors = [
    { name = "Genomics and Machine Learning Lab", email = "andrew.newman@uq.edu.au" },
]
description = "A downstream analysis toolkit for Spatial Transcriptomic data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD license" }
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.0",
    "bokeh>=3.7.0,<4.0",
    "click>=8.2.0,<9.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "numba>=0.58.1",
    "numpy>=2.4.0",
    "pillow>=11.0.0,<12.0",
    "scanpy>=1.12.0",
    "scikit-image>=0.22.0",
    "pandas>=2.3.0",
    "imageio>=2.37.0,<3.0",
    "scipy>=1.17.0,<2.0",
    "scikit-learn>=1.8.0,<2.0",
    "zarr>=3.1",
    "dask>=2024.11.2",
    "spatialdata>=0.7.0",
    "spatialdata-io>=0.6.0",
    "spatialdata-plot>=0.3.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "geopandas>=1.0.0,<2.0",
    "shapely>=2.0.0,<3.0",
]
keywords = ["stlearn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.16",
    "pytest>=7.0",
    "tox>=4.0",
    "ghp-import>=2.1.0",
    "sphinx>=4.0",
    "furo==2024.8.6",
    "myst-parser>=0.18",
    "nbsphinx>=0.9.0",
    "types-tensorflow>=2.8.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-autosummary-accessors>=2023.4.0",
]
test = [
    "pytest",
    "pytest-cov",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
    "bokeh>=3.7.0,<4.0",
    "rpy2>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/BiomedicalMachineLearning/stLearn"
Repository = "https://github.com/BiomedicalMachineLearning/stLearn"

[project.scripts]
stlearn = "stlearn.app.cli:main"

[tool.setuptools.packages.find]
include = ["stlearn", "stlearn.*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "docs/_build"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "NPY",              # numpy-specific (NPY001, NPY002, NPY003, NPY201)
    "PD",               # pandas-vet
    "B",                # flake8-bugbear (catches real bugs)
    "SIM",              # flake8-simplify
    "RUF",              # ruff-specific rules
]
ignore = [
    "E722",             # bare except — you've already accepted these
    "F811",             # redefinition — accepted
    "N803", "N806",     # naming: lowercase args/vars — too invasive to fix
    "N818",             # exception naming
    "PD011",            # .values vs .to_numpy() — too noisy, mostly false positives
    "B008",             # function calls in default args — used by typer/click
    "SIM108",           # ternary suggestions can hurt readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]                 # tests can be loose
"docs/conf.py" = ["E", "F", "UP"]      # generated/config file
"**/__init__.py" = ["F401"]            # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"